# vector_slicer

./: .gitignore  CMakeLists.txt  ExecutionConfig.h  README.md  install_lin.sh  install_mac.sh  install_win.bat  main.cpp
bayesopt/: CMakeLists.txt
bayesopt/examples/: CMakeLists.txt
bayesopt/include/bayesopt/: bayesoptbase.hpp
bayesopt/nlopt2/: CMakeLists.txt
bayesopt/nlopt2/stogo/: tools.h
bayesopt/nlopt2/util/: timer.c
bayesopt/src/: bayesoptbase.cpp
bayesopt/utils/: displaygp.hpp
configuration/: bayesian_optimisation.cfg  disagreement.cfg  disagreement_function.cfg  filesToTest.txt  files_to_test.txt  filling.cfg
execution_setup/: filesToTest.txt
external_software/mathematica/: Demonstration.nb  README.txt  VectorSlicerInputGenerator.m  VectorSlicerOutputReader.m
external_software/python/: director.py  example_usage.py  input_generation.py  output_reading.py  setup.py  shape.py  slicer_setup.py  vector_slicer.py
libs/auxiliary/: Exporting.cpp  Exporting.h  FillingConfig.cpp  FillingConfig.h  GCodeFile.cpp  GCodeFile.h  Geometry.cpp  Geometry.h  Hyrel.cpp  Hyrel.h  Perimeter.cpp  Perimeter.h  PerimeterChecking.cpp  PerimeterChecking.h  PerimeterGeneration.cpp  PerimeterGeneration.h  ProgressBar.cpp  SimpleMathOperations.cpp  SimpleMathOperations.h  TableReading.cpp  TableReading.h  ValarrayConversion.cpp  ValarrayConversion.h  ValarrayOperations.cpp  ValarrayOperations.h
libs/gui/: OpenFiles.cpp  OpenFiles.h
libs/high_level/: AutomaticPathGeneration.cpp  AutomaticPathGeneration.h  ConfigDisagreement.cpp  ConfigDisagreement.h  ConfigGeneration.cpp  ConfigGeneration.h  FillingOptimization.cpp  FillingOptimization.h  OpenFiles.cpp  OpenFiles.h  OptimizePathGeneration.cpp  OptimizePathGeneration.h  OptimizedFilling.cpp  OptimizedFilling.h  PoorMansML.cpp  PoorMansML.h  ProgressBar.cpp  ProgressBar.h  ReadingFromOutside.cpp  ReadingFromOutside.h
libs/obsolete/: AutomaticPathGeneration.cpp  PathFillingOrder.cpp  ProgressBar.cpp
libs/pattern/: DesiredPattern.cpp  DesiredPattern.h  FilledPattern.cpp  FilledPattern.h  FillingPatterns.cpp  FillingPatterns.h  GCodeGenerator.cpp  GCodeGenerator.h  GcodeGenerator.cpp  GcodeGenerator.h  IndexedPath.cpp  IndexedPath.h  Path.cpp  Path.h  PathFillingOrder.h  QuantifyPattern.cpp  QuantifyPattern.h  StartingPoint.cpp  StartingPoint.h
libs/printer/: Printer.cpp  Printer.h
mathematica/: Demonstration.nb  VectorSlicerIntegration.m
paths/: azimuthal_05_cm.csv  azimuthal_1_cm.csv  diagonal_1x05_cm.csv  diagonal_2x1_cm.csv  linear_1x05_cm.csv  linear_2x1_cm.csv  radial_05_cm.csv  radial_1_cm.csv  symmetric_gauss_curved_4x3_cm.csv  symmetric_positive_4x12_cm.csv
patterns/example_azimuthal_10_mm/: config.txt  disagreement.cfg  shape.csv
patterns/example_azimuthal_10_mm_square/: shape.csv
patterns/example_linear_20x10_mm/: config.txt  shape.csv  splay.csv  theta_field.csv
patterns/example_longitudinal_20_10_mm/: bayesian_optimisation.cfg  shape.csv  splay.csv  theta_field.csv
patterns/example_longitudinal_cross_20_5_mm/: splay.csv
patterns/example_radial_10_mm/: shape.csv
patterns/example_transverse_cross_20_5_mm/: config.txt  shape.csv
python/: README.md  director.py  example_usage.py  guide.py  input_generation.py  requirements.txt  slicer_setup.py
python/examples/: example_1_minimal_example.py  example_2_shape_manipulation.py  example_3_pattern_manipulation.py  old_guide.py
python/lib/: __init__.py  output_reading.py  project_paths.py  slicer.py  slicer_setup.py
python/lib/director/: basic.py  basic_directors.py  director.py
python/lib/pattern/: compressed_plate.py  duffy2020.py  duffy2021.py  feng2022.py  feng2024.py  image_pattern.py  mostajeran2016.py  pattern.py  pattern.svg.py  pattern_vtk.py
python/lib/shape/: basic.py  basic_shapes.py  imported.py  shape.py
python/source/: director.py  directors.py  output_reading.py  pattern.py  pattern_vtk.py  shape.py  shapes.py  slicer_setup.py
results/: config.txt  filesToTest.txt  optimizationSequence.txt
source/: bayesian_optimisation.cpp  bayesian_optimisation.h  importing_patterns.cpp  importing_patterns.h  optimisation_configurations.cpp  optimisation_configurations.h  vector_slicer_api.cpp  vector_slicer_api.h  vector_slicer_config.h.in
source/auxiliary/: Exporting.cpp  Exporting.h  FillingConfig.cpp  FillingConfig.h  GCodeFile.cpp  GCodeFile.h  Geometry.cpp  Geometry.h  Hyrel.cpp  Hyrel.h  Perimeter.cpp  Perimeter.h  ProgressBar.cpp  ProgressBar.h  SimpleMathOperations.cpp  SimpleMathOperations.h  TableReading.cpp  TableReading.h  ValarrayOperations.cpp  ValarrayOperations.h  vector_operations.cpp  vector_operations.h
source/high_level/: ConfigDisagreement.cpp  ConfigDisagreement.h  ConfigGeneration.cpp  ConfigGeneration.h  FillingOptimization.cpp  FillingOptimization.h  OpenFiles.cpp  OpenFiles.h  ReadingFromOutside.cpp  ReadingFromOutside.h  bayesian_optimisation.cpp  bayesian_optimisation.h
source/importing_and_exporting/: Exporting.cpp  Exporting.h  OpenFiles.cpp  OpenFiles.h  ReadingFromOutside.cpp  ReadingFromOutside.h  TableReading.cpp  TableReading.h
source/obsolete/: AutomaticPathGeneration.cpp  AutomaticPathGeneration.h  PathFillingOrder.cpp  PathFillingOrder.h
source/pattern/: DesiredPattern.cpp  DesiredPattern.h  DirectorIndexedPath.cpp  DirectorIndexedPath.h  FilledPattern.cpp  FilledPattern.h  FillingConfig.cpp  FillingConfig.h  FillingPatterns.cpp  FillingPatterns.h  IndexedPath.cpp  IndexedPath.h  Path.cpp  Path.h  QuantifiedConfig.cpp  QuantifiedConfig.h  QuantifiedPattern.cpp  QuantifiedPattern.h  QuantifyPattern.cpp  QuantifyPattern.h  StartingPoint.cpp  StartingPoint.h  bayesian_optimisation.cpp  bayesian_optimisation.h  coord.cpp  coord.h  desired_pattern.cpp  desired_pattern.h  director_indexed_path.cpp  director_indexed_path.h  disagreement_weights.cpp  disagreement_weights.h  filled_pattern.cpp  filled_pattern.h  filling_config.cpp  filling_config.h  filling_patterns.cpp  filling_patterns.h  path.cpp  path.h  (+7 more)
source/pattern/auxiliary/: Geometry.cpp  Geometry.h  Perimeter.cpp  Perimeter.h  ProgressBar.h  (+25 more)
(+38 files in other folders)
